--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,10 +12,14 @@ pool:
 steps:
 - task: NodeTool@0
   inputs:
-    versionSpec: '10.x'
+    versionSpec: '10.13'
   displayName: 'Install Node.js'
 
 - script: |
     npm install
     npm run build
   displayName: 'npm install and build'
+- task: NodeTool@0
+  inputs:
+    versionSource: 'spec'
+    versionSpec: '10.13'
